@@ -1,5 +1,9 @@
-java -p ModuleB_jar -m ModuleB/user.FirstUser
+java -p Modules -m ModuleB/user.FirstUser
 exports util to VARU;
 
 requires transitive ModuleA;
 opens impl;
+
+java -p Serviceloader -m Ratefinder/ratefinder.RateFinder
+
+F:\JavaProjects\JAVA9X\out\artifacts>jLink --module-path Modules --add-modules ModuleA --add-modules ModuleB --output myApp --launcher myApp=ModuleB/user.FirstUser
